; ModuleID = '/home/carl/AnghaBench/Craft/deps/glew/src/extr_glew.c_glxewGetExtension.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glew/src/extr_glew.c_glxewGetExtension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLX_EXTENSIONS = common dso_local global i32 0, align 4
@GL_FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @glxewGetExtension(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = call i32 (...) @glXGetCurrentDisplay()
  %7 = load i32, i32* @GLX_EXTENSIONS, align 4
  %8 = call i64 @glXGetClientString(i32 %6, i32 %7)
  %9 = inttoptr i64 %8 to i32*
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* null, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @GL_FALSE, align 4
  store i32 %13, i32* %2, align 4
  br label %24

14:                                               ; preds = %1
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @_glewStrLen(i32* %16)
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %15, i64 %18
  store i32* %19, i32** %5, align 8
  %20 = load i8*, i8** %3, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @_glewSearchExtension(i8* %20, i32* %21, i32* %22)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %14, %12
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @glXGetClientString(i32, i32) #1

declare dso_local i32 @glXGetCurrentDisplay(...) #1

declare dso_local i32 @_glewStrLen(i32*) #1

declare dso_local i32 @_glewSearchExtension(i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
